; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_api_cmd.c_prepare_cell.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_api_cmd.c_prepare_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hinic_api_cmd_chain = type { i32, %struct.hinic_api_cmd_cell* }
%struct.hinic_api_cmd_cell = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hinic_api_cmd_chain*, i32, i8*, i32)* @prepare_cell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prepare_cell(%struct.hinic_api_cmd_chain* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.hinic_api_cmd_chain*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.hinic_api_cmd_cell*, align 8
  %10 = alloca i32, align 4
  store %struct.hinic_api_cmd_chain* %0, %struct.hinic_api_cmd_chain** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.hinic_api_cmd_chain*, %struct.hinic_api_cmd_chain** %5, align 8
  %12 = getelementptr inbounds %struct.hinic_api_cmd_chain, %struct.hinic_api_cmd_chain* %11, i32 0, i32 1
  %13 = load %struct.hinic_api_cmd_cell*, %struct.hinic_api_cmd_cell** %12, align 8
  store %struct.hinic_api_cmd_cell* %13, %struct.hinic_api_cmd_cell** %9, align 8
  %14 = load %struct.hinic_api_cmd_chain*, %struct.hinic_api_cmd_chain** %5, align 8
  %15 = getelementptr inbounds %struct.hinic_api_cmd_chain, %struct.hinic_api_cmd_chain* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @get_cell_data_size(i32 %16)
  store i32 %17, i32* %10, align 4
  %18 = load %struct.hinic_api_cmd_cell*, %struct.hinic_api_cmd_cell** %9, align 8
  %19 = getelementptr inbounds %struct.hinic_api_cmd_cell, %struct.hinic_api_cmd_cell* %18, i32 0, i32 0
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @prepare_cell_ctrl(i32* %19, i32 %20)
  %22 = load %struct.hinic_api_cmd_chain*, %struct.hinic_api_cmd_chain** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i8*, i8** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @prepare_api_cmd(%struct.hinic_api_cmd_chain* %22, i32 %23, i8* %24, i32 %25)
  ret void
}

declare dso_local i32 @get_cell_data_size(i32) #1

declare dso_local i32 @prepare_cell_ctrl(i32*, i32) #1

declare dso_local i32 @prepare_api_cmd(%struct.hinic_api_cmd_chain*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
